Shenandoah compilation fails with assert(is_CountedLoopEnd()) failed: invalid node class

XMLWordPrintable

    • b23

        This seems to only reproduce with Shenandoah, so synopsis is provisional. Please change as you see fit.

        Steps to reproduce:

        $ cd test/hotspot/jtreg/gc/shenandoah/compiler
        $ javac --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED TestReferenceCAS.java
        $ ../../../../../..//build/linux-x86_64-server-fastdebug/images/jdk/bin/java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Xcomp -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC -XX:-TieredCompilation -XX:+DeoptimizeALot TestReferenceCAS

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/node.hpp:814
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/node.hpp:814), pid=29341, tid=29362
        # assert(is_CountedLoopEnd()) failed: invalid node class
        #
        # JRE version: OpenJDK Runtime Environment (13.0) (fastdebug build 13-internal+0-adhoc.shade.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 13-internal+0-adhoc.shade.jdk-jdk, compiled mode, sharing, compressed oops, shenandoah gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x11e184a] LoopNode::verify_strip_mined(int) const+0x6ba
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/shade/trunks/jdk-jdk/test/hotspot/jtreg/gc/shenandoah/compiler/core.29341)
        #
        # An error report file with more information is saved as:
        # /home/shade/trunks/jdk-jdk/test/hotspot/jtreg/gc/shenandoah/compiler/hs_err_pid29341.log
        #
        # Compiler replay data is saved as:
        # /home/shade/trunks/jdk-jdk/test/hotspot/jtreg/gc/shenandoah/compiler/replay_pid29341.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 29362
        Dumping core ...
        Aborted (core dumped)

        -XX:LoopStripMiningIter=0 makes it go away.

              Assignee:
              Roland Westrelin
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: