8224496: Shenandoah compilation fails with assert(is_CountedLoopEnd()) failed: invalid node class

Reviewed-by: rkennke